# fera-crawler

./: .gitignore  CLAUDE.md  README.md  cli-plan.md  enterprise-ready-plan.md  errors.md  errorwindows.txt  ins.md  instructions.md  overview.md  package-lock.json  package.json  todos.md
.github/workflows/: build.yml
docs/: vpngate_integration.md
docs/plans/: 2026-03-26-mcp-server-design.md  2026-04-07-scraper-feature.md  2026-04-08-recrawl-queue.md  2026-04-08-save-config-with-crawl.md  2026-04-24-block-detection-design.md  2026-04-24-immediate-wins.md  2026-04-24-settings-architecture.md  2026-04-25-voice-control.md  2026-04-29-extreme-performance-architecture.md  future-fera.md
frontend/: designrules.md  index.html  package.json  vite.config.ts
frontend/src/: App.vue  env.d.ts
mcp-server/: package-lock.json  package.json
mcp-server/src/: configCache.ts  crawler.ts  database.ts  index.ts  paths.ts  types.ts
scripts/: download-chromium.mjs  release.mjs
sidecar/: esbuild.config.mjs  package.json  tsconfig.json  vitest.config.ts
sidecar-launcher/: main.rs
sidecar/scripts/: compress-images.ts
sidecar/src/: adaptiveController.ts  blockDetector.ts  crawler.ts  index.ts  inspector.ts  observability.ts  perHostState.ts  pipeline.ts  probe.ts  probeMatrix.ts  rate-limiter.ts  responseClassifier.ts  robots.ts  sitemap.ts  (+4 more)
src-tauri/: Cargo.toml  installer-hooks.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db_query.rs  db_writer.rs  exporter.rs  lib.rs  main.rs  voice_commands.rs
(+114 files in other folders)
