[package]
name = "fera"
version = "0.4.0"
edition = "2021"

[lib]
name = "fera_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "fera"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
