[package]
name = "fera"
version = "0.4.2"
edition = "2021"

[lib]
name = "fera_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "fera"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "sync", "process", "time"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite"] }

# Linux-only: enable getUserMedia (microphone) inside WebKitGTK and
# auto-grant permission requests so STT works in the webview.
[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = "=2.0.2"
